[package]
name = "rkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
log = { version = "0.4"}
zeroize = { version = "1.6.0", features = ["derive"] }
lazy_static ={ version = "1.4"}
