[package]
name = "rkp"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
log = { version = "0.4"}
zeroize = { version = "1.6", features = ["derive"] }
lazy_static = { version = "1.4"}
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.29", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
warp = { version = "0.3" }
log4rs = { version = "1.2" }
anyhow = { version = "1.0" }
fast-socks5 = { version = "0.8" }
wildmatch = { version = "2.1" }
async-recursion = { version = "1.0" }
futures = { version = "0.3" }
bytes = { version = "1.4" }
